# AzurPilot

./: .gitignore  README.md  alas.py  pyproject.toml
campaign/: Readme.md
campaign/campaign_war_archives/: campaign_base.py
config/: deploy.template-docker-cn.yaml  deploy.template-docker.yaml  deploy.template-linux-cn.yaml  template.json
deploy/: git.py
deploy/docker/: Dockerfile
dev_tools/: button_region_editor.py
module/: server_checker.py
module/base/: api_client.py  device_id.py
module/campaign/: gems_farming.py  run.py
module/combat/: assets.py  combat.py
module/commission/: commission.py
module/config/: config_generated.py  config_updater.py  server.py  utils.py
module/daemon/: ocr_benchmark.py  sets_azur_lane_jp.tar
module/device/: device.py
module/event/: campaign_sp.py
module/exercise/: exercise.py  hp_daemon.py
module/handler/: info_handler.py
module/island/: assets.py  island.py  island_air_drop.py  island_business.py  island_cargo_preparation.py  island_daily_gather.py  island_daily_interact.py  island_daily_order.py  island_farm.py  island_fishery.py  island_juu_coffee.py  island_manufacture.py  island_mine_forest.py  island_pearl_sell.py  island_rancher.py  island_restaurant.py  island_select_character.py  island_shop_base.py  island_teahouse.py  project_data.py
module/island_daily_interact/: assets.py
module/island_pearl_sell/: assets.py
module/meowfficer/: buy.py
module/ocr/: al_ocr.py  models.py
module/os/: map.py
module/os_handler/: map_event.py
module/reward/: reward.py
module/shop/: shop_general.py
(+29 files in other folders)
