[project]
name = "azurpilot"
version = "0.0.0"
requires-python = ">=3.14,<3.15"
dependencies = [
    "numpy",
    "scipy",
    "pillow",
    "opencv-python>=4.8.0",
    "imageio==2.26.0",
    "imageio-ffmpeg",
    "adbutils==0.11.0",
    "uiautomator2==2.16.17",
    "uiautomator2cache",
    "wrapt",
    "retrying",
    "jellyfish",
    "pyyaml",
    "inflection",
    "pywebio==1.7.1",
    "starlette==0.49.1",
    "anyio",
    "uvicorn[standard]",
    "aiofiles",
    "pypresence",
    "rich==11.2.0",
    "zerorpc",
    "pyzmq",
    "onepush",
    "psutil",
    "chardet",
    "matplotlib",
    "pycryptodome",
    "typing-extensions>=4.8.0",
    "pydantic>=2.5.0",
    "rapidocr",
    "onnxruntime-directml>=1.24.4; sys_platform == 'win32'",
    "onnxruntime==1.26.0; sys_platform == 'linux'",
    "onnxruntime==1.26.0; sys_platform == 'darwin' and platform_machine == 'arm64'",
    "watchdog>=2.0.0",
    "numba",
    "uv",
    "lz4",
    "setuptools==75.8.2",
    "importlib-resources>=6.0.0",
    "importlib-metadata>=8.0.0",
    "openai",
    "mcp==1.23.0",
    "sse-starlette==3.0.3",
    "pygments>=2.20.0",
]

[dependency-groups]
dev = [
    "ruff",
]

[tool.uv]
package = false
